force-app/main/default/objects/Contract/fields/Online__c.field-meta.xml
<CustomField>
    <fullName>Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[GG]This will be updated by Cloud Portal for the Contracts created from Cloud Portal.</description>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>