force-app/main/default/objects/Contract/fields/Original_Contract_INT__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_INT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Original Contract)</relationshipLabel>
    <relationshipName>NewContracts</relationshipName>
    <type>Lookup</type>
</CustomField>