force-app/main/default/objects/Contract/fields/Original_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Number__c</fullName>
    <formula>Original_Contract_INT__r.Contract_Number__c</formula>
    <label>Original Contract Number</label>
    <type>Text</type>
</CustomField>