force-app/main/default/objects/Contract/fields/Original_SOF_received__c.field-meta.xml
<CustomField>
    <fullName>Original_SOF_received__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>OMT Field</description>
    <label>Original SOF received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>