force-app/main/default/objects/Contract/fields/OTC_Advance_Amount_Due_SOS__c.field-meta.xml
<CustomField>
    <fullName>OTC_Advance_Amount_Due_SOS__c</fullName>
    <formula>CASE(
    TEXT( OTC_Advance_Payment_Term_SOS__c ),
    &quot;100%&quot;, Total_One_Time_Charge__c ,
    &quot;50%&quot;, Total_One_Time_Charge__c  * 0.5,
				&quot;25%&quot;,Total_One_Time_Charge__c * 0.25,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTC Advance Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>