force-app/main/default/objects/Contract/fields/OTC_Advance_Payment_Term_SOS__c.field-meta.xml
<CustomField>
    <fullName>OTC_Advance_Payment_Term_SOS__c</fullName>
    <inlineHelpText>One Time Charges Advance Payment Term</inlineHelpText>
    <label>OTC Advance Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>