force-app/main/default/objects/Contract/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <description>[GG] Get Partner Names from Opportunity. This will be pushed to backend.</description>
    <formula>if( SBQQ__Opportunity__r.PartnerPrimary__c &lt;&gt; &quot;&quot;,SBQQ__Opportunity__r.PartnerPrimary__r.Name,
 if( SBQQ__Opportunity__r.PartnerSecondary__c &lt;&gt; &quot;&quot;, SBQQ__Opportunity__r.PartnerSecondary__r.Name,
  if( SBQQ__Opportunity__r.PartnerTertiary__c &lt;&gt; &quot;&quot;,  SBQQ__Opportunity__r.PartnerTertiary__r.Name,&quot;&quot;
  ) 
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>