force-app/main/default/objects/Contract/fields/Partner_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Number__c</fullName>
    <formula>if( SBQQ__Opportunity__r.PartnerPrimary__c &lt;&gt; &quot;&quot;, SBQQ__Opportunity__r.PartnerPrimary__r.Account_Number__c ,
 if( SBQQ__Opportunity__r.PartnerSecondary__c &lt;&gt; &quot;&quot;, SBQQ__Opportunity__r.PartnerSecondary__r.Account_Number__c ,
  if( SBQQ__Opportunity__r.PartnerTertiary__c &lt;&gt; &quot;&quot;,  SBQQ__Opportunity__r.PartnerTertiary__r.Account_Number__c,&quot;&quot; 
  ) 
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Number</label>
    <type>Text</type>
</CustomField>