force-app/main/default/objects/Contract/fields/Partner_Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Source__c</fullName>
    <description>Formula to pull Primary Partner of the Opportunity. This will be used for reports.</description>
    <formula>SBQQ__Opportunity__r.PartnerPrimary__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner - Primary Source</label>
    <type>Text</type>
</CustomField>