force-app/main/default/objects/Contract/fields/Partner_Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Secondary_Source__c</fullName>
    <description>Formula to pull Secondary Partner of the Opportunity. This will be used for reports.</description>
    <formula>SBQQ__Opportunity__r.PartnerSecondary__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner - Secondary Source</label>
    <type>Text</type>
</CustomField>