force-app/main/default/objects/Contract/fields/PO_EndDate__c.field-meta.xml
<CustomField>
    <fullName>PO_EndDate__c</fullName>
    <label>PO EndDate</label>
    <type>Date</type>
</CustomField>