force-app/main/default/objects/Contract/fields/PO_StartDate__c.field-meta.xml
<CustomField>
    <fullName>PO_StartDate__c</fullName>
    <label>PO StartDate</label>
    <type>Date</type>
</CustomField>