force-app/main/default/objects/Contract/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <label>PO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PO Issued</fullName>
            </value>
            <value>
                <fullName>PO Not Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>