force-app/main/default/objects/Contract/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <formula>TEXT(SBQQ__Opportunity__r.POC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC?</label>
    <type>Text</type>
</CustomField>