force-app/main/default/objects/Contract/fields/Post_UAT__c.field-meta.xml
<CustomField>
    <fullName>Post_UAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Post UAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>