force-app/main/default/objects/Contract/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <description>Formula to pull Primary Source of the Opportunity. This will be used for reports.</description>
    <formula>TEXT( SBQQ__Opportunity__r.PrimarySource__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Source</label>
    <type>Text</type>
</CustomField>