force-app/main/default/objects/Contract/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>The value will come from OTRS</description>
    <label>Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>