force-app/main/default/objects/Contract/fields/Quantity_Split_Completed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Split_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Split Completed</label>
    <type>Checkbox</type>
</CustomField>