force-app/main/default/objects/Contract/fields/Quote_SCF_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_SCF_Type__c</fullName>
    <description>This field is same as that of the SCF Type. It&apos;s created so that can be used in Before Insert Trigger as SCF Type is updated in PB and Before Insert Trigger runs before PB.</description>
    <formula>Text(SBQQ__Quote__r.SCF_Type__c)</formula>
    <label>Quote SCF Type</label>
    <type>Text</type>
</CustomField>