force-app/main/default/objects/Contract/fields/RC_Advance_Amount_Due_SOE__c.field-meta.xml
<CustomField>
    <fullName>RC_Advance_Amount_Due_SOE__c</fullName>
    <formula>IF(
    ContractTerm &gt;= 12,
    CASE(
        TEXT( RC_Advance_Payment_Term_SOS__c ),
        &apos;Monthly in Advance&apos;, Annual_Recurring_Charge__c / 12,
        &apos;Quarterly in Advance&apos;, Annual_Recurring_Charge__c / 4,
        &apos;Half yearly in Advance&apos;, Annual_Recurring_Charge__c / 2,
        &apos;Yearly in Advance&apos;, Annual_Recurring_Charge__c,
        0
    ),
    CASE(
        TEXT( RC_Advance_Payment_Term_SOS__c ),
        &apos;Monthly in Advance&apos;, Annual_Recurring_Charge__c / ContractTerm,
        &apos;Quarterly in Advance&apos;, Annual_Recurring_Charge__c / ContractTerm * 4,
        &apos;Half yearly in Advance&apos;, Annual_Recurring_Charge__c / ContractTerm * 6,
        &apos;Yearly in Advance&apos;, Annual_Recurring_Charge__c / ContractTerm * 12,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RC Advance Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>