force-app/main/default/objects/Contract/fields/RC_Advance_Payment_Term_SOS__c.field-meta.xml
<CustomField>
    <fullName>RC_Advance_Payment_Term_SOS__c</fullName>
    <inlineHelpText>Recurring Charges Advance Payment Terms</inlineHelpText>
    <label>RC Advance Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly in Advance</fullName>
            </value>
            <value>
                <fullName>Monthly in Arrears</fullName>
            </value>
            <value>
                <fullName>Quarterly in Advance</fullName>
            </value>
            <value>
                <fullName>Quarterly in Arrears</fullName>
            </value>
            <value>
                <fullName>Half yearly in Advance</fullName>
            </value>
            <value>
                <fullName>Half yearly in Arrears</fullName>
            </value>
            <value>
                <fullName>Yearly in Advance</fullName>
            </value>
            <value>
                <fullName>Yearly in Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>