force-app/main/default/objects/Contract/fields/Regional_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Regional_Head_Email__c</fullName>
    <label>Regional Head Email</label>
    <type>Email</type>
</CustomField>