force-app/main/default/objects/Contract/fields/Renewal_Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cycle_Count__c</fullName>
    <label>Renewal Cycle Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>