force-app/main/default/objects/Contract/fields/SCF_Quote_Master_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>SCF_Quote_Master_Contract_Status__c</fullName>
    <formula>SBQQ__Quote__r.Master_Contract_Status__c</formula>
    <label>SCF Quote Master Contract Status</label>
    <type>Text</type>
</CustomField>