force-app/main/default/objects/Contract/fields/SCF_Type__c.field-meta.xml
<CustomField>
    <fullName>SCF_Type__c</fullName>
    <label>SCF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Bill Cycle Change</fullName>
            </value>
            <value>
                <fullName>Contract Line SCF</fullName>
            </value>
            <value>
                <fullName>Transfer of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>