force-app/main/default/objects/Contract/fields/Send_Documents__c.field-meta.xml
<CustomField>
    <fullName>Send_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Documents</label>
    <type>Checkbox</type>
</CustomField>