force-app/main/default/objects/Contract/fields/Send_To_API_Layer__c.field-meta.xml
<CustomField>
    <fullName>Send_To_API_Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to send Contract to Kafka</description>
    <inlineHelpText>Check to send Contract to Kafka</inlineHelpText>
    <label>Send To Kafka</label>
    <type>Checkbox</type>
</CustomField>