force-app/main/default/objects/Contract/fields/SEZ__c.field-meta.xml
<CustomField>
    <fullName>SEZ__c</fullName>
    <description>Formula to pull SEZ of the Bill To Address. This will be used for reports.</description>
    <formula>TEXT( Bill_To_Address__r.SEZ__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEZ</label>
    <type>Text</type>
</CustomField>