force-app/main/default/objects/Contract/fields/SOE_Milestone_Formula__c.field-meta.xml
<CustomField>
    <fullName>SOE_Milestone_Formula__c</fullName>
    <description>Used to sum the SOE Milestone fields. This is used for the validation to check that the total milestone % is equal to 100</description>
    <formula>Advance_along_with_PO_SOF__c + Intimation_of_Readiness_of_Dispatch__c + Delivery__c + Installation_Commissioning__c + UAT__c + Post_UAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOE Milestone Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>