force-app/main/default/objects/Contract/fields/SOE_Product_Available__c.field-meta.xml
<CustomField>
    <fullName>SOE_Product_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOE Product Available</label>
    <type>Checkbox</type>
</CustomField>