force-app/main/default/objects/Contract/fields/Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engineer__c</fullName>
    <formula>SBQQ__Quote__r.Solution_Engineer__r.FirstName + &apos; &apos;+SBQQ__Quote__r.Solution_Engineer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Engineer</label>
    <type>Text</type>
</CustomField>