force-app/main/default/objects/Contract/fields/SOW_agreed_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>SOW_agreed_with_Customer__c</fullName>
    <label>SOW agreed with Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>