force-app/main/default/objects/Contract/fields/SOW_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>SOW_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>