force-app/main/default/objects/Contract/fields/Submit_for_OMT_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_OMT_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to submit the approval from the process builder</description>
    <label>Submit for OMT Approval</label>
    <type>Checkbox</type>
</CustomField>