force-app/main/default/objects/Contract/fields/Support_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Support_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Ship To Account)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>