force-app/main/default/objects/Contract/fields/Support_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Support_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2bDel_Support To Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contracts (Support To Address)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>