force-app/main/default/objects/Contract/fields/Support_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_To_Number__c</fullName>
    <description>Created for Reporting purpose. This will fetch the Account Number from the Support To Account.</description>
    <formula>Support_To_Account__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support To Number</label>
    <type>Text</type>
</CustomField>