force-app/main/default/objects/Contract/fields/TCV_Formula_for_Year_2__c.field-meta.xml
<CustomField>
    <fullName>TCV_Formula_for_Year_2__c</fullName>
    <label>TCV Formula for Year 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>