force-app/main/default/objects/Contract/fields/TOS_SCF__c.field-meta.xml
<CustomField>
    <fullName>TOS_SCF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOS SCF?</label>
    <type>Checkbox</type>
</CustomField>