force-app/main/default/objects/Contract/fields/Total_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Grand_Total__c</fullName>
    <label>Total Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>