force-app/main/default/objects/Contract/fields/Total_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Charge__c</fullName>
    <label>Total One Time Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>