force-app/main/default/objects/Contract/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Formula to pull Vertical of the Bill To Account. This will be used for reports.</description>
    <formula>TEXT( Account.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>