force-app/main/default/objects/Contract/validationRules/Account_Details_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Details_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( AccountId )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account details cannot be changed</errorMessage>
</ValidationRule>