force-app/main/default/objects/Contract/validationRules/Cannot_Update_PO_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_PO_Details</fullName>
    <active>true</active>
    <description>Cannot update PO Details while SCF is in Process</description>
    <errorConditionFormula>AND(
Is_SCF_Generated__c 	,
OR(
ISCHANGED(Customer_PO__c),				     ISCHANGED(Customer_PO_Date__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot Update PO Details while SCF is in Process.</errorMessage>
</ValidationRule>