force-app/main/default/objects/Contract/validationRules/Customer_Authorized_Signatory_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Authorized_Signatory_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Customer_Authorised_Signatory__c )),
    Customer_Authorised_Signatory__r.AccountId != AccountId 
)</errorConditionFormula>
    <errorDisplayField>Customer_Authorised_Signatory__c</errorDisplayField>
    <errorMessage>Customer Authorized signatory must belong to Bill-To Account only.</errorMessage>
</ValidationRule>