force-app/main/default/objects/Contract/validationRules/Customer_PO_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_PO_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( PO_Status__c ,&apos;PO Issued&apos;)
,PO_StartDate__c &gt; PO_EndDate__c )</errorConditionFormula>
    <errorMessage>PO Startdate cannot be greater than PO EndDate</errorMessage>
</ValidationRule>