force-app/main/default/objects/Contract/validationRules/Document_Status_required_before_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_Status_required_before_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Validation__c ) &amp;&amp; Validation__c</errorConditionFormula>
    <errorMessage>Please Update Document Status before Approval</errorMessage>
</ValidationRule>