force-app/main/default/objects/Contract/validationRules/Generate_PDF_before_sending_for_OMT.validationRule-meta.xml
<ValidationRule>
    <fullName>Generate_PDF_before_sending_for_OMT</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Submit_for_OMT_Approval__c ) &amp;&amp;
Submit_for_OMT_Approval__c &amp;&amp;  Is_PDF_Generated__c = false</errorConditionFormula>
    <errorMessage>Please Generate SOF before sending for OMT Approval.</errorMessage>
</ValidationRule>