force-app/main/default/objects/Contract/validationRules/Mandatory_Detais_before_OMT_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Detais_before_OMT_Approval</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Submit_for_OMT_Approval__c ) &amp;&amp;
Submit_for_OMT_Approval__c &amp;&amp;
(
  ISBLANK( Customer_Billing_Contact__c ) ||
  ISBLANK( Customer_Exec_Mgmt_Contact__c ) ||
  ISBLANK( Customer_Authorised_Signatory__c ) ||
  ISBLANK( Customer_SPoC__c ) ||
  ISBLANK( TEXT( RC_Advance_Payment_Term_SOS__c ))
)</errorConditionFormula>
    <errorMessage>Please fill mandatory details before submitting the contract for OMT approval.</errorMessage>
</ValidationRule>