force-app/main/default/objects/Contract/validationRules/Need_Contact_in_Support_to_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Contact_in_Support_to_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 Submit_for_OMT_Approval__c ,
				 ISCHANGED(Submit_for_OMT_Approval__c) ,
				 IF(Support_To_Account__r.Contact_Count__c &lt; 0,TRUE,FALSE)
)</errorConditionFormula>
    <errorMessage>Please add an Contact to Support To Account to continue.</errorMessage>
</ValidationRule>