force-app/main/default/objects/Contract/validationRules/OMT_change_renewal_type_from_Auto2Manual.validationRule-meta.xml
<ValidationRule>
    <fullName>OMT_change_renewal_type_from_Auto2Manual</fullName>
    <active>true</active>
    <description>OMT can change renewal type from Auto to Manual only and not vice a versa</description>
    <errorConditionFormula>$Profile.Name = &quot;Yotta Order Management&quot; &amp;&amp;
 ISCHANGED( Renewal_Type__c ) &amp;&amp;
 ISPICKVAL( Renewal_Type__c, &quot;Auto&quot;)</errorConditionFormula>
    <errorMessage>OMT can change renewal type from Auto to Manual only and not vice a versa</errorMessage>
</ValidationRule>