force-app/main/default/objects/Contract/validationRules/Only_OMT_can_Approve_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_OMT_can_Approve_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Quote_SCF_Type__c &lt;&gt; &quot;Transfer of Service&quot;,
 Quote_SCF_Type__c &lt;&gt; &quot;Bill Cycle Change&quot;,
 Quote_SCF_Type__c &lt;&gt; &quot;Address Change&quot;,
 Quote_Type__c &lt;&gt; &quot;Renewal&quot;,
 ISPICKVAL(Status, &quot;Approved&quot;),
 ISCHANGED(Status),
 $Profile.Name &lt;&gt; &quot;Yotta Order Management&quot;,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only OMT team can approve contract</errorMessage>
</ValidationRule>