force-app/main/default/objects/Contract/validationRules/Partner_Comission_is_Required_before_OMT.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Comission_is_Required_before_OMT</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Submit_for_OMT_Approval__c ) &amp;&amp;
NOT(Is_SOF_Approved__c) &amp;&amp;
Submit_for_OMT_Approval__c &amp;&amp;
(
NOT(ISBLANK( SBQQ__Opportunity__r.PartnerPrimary__c )) ||
NOT(ISBLANK( SBQQ__Opportunity__r.PartnerSecondary__c )) ||
NOT(ISBLANK( SBQQ__Opportunity__r.PartnerTertiary__c ))
)
&amp;&amp;
ISBLANK(TEXT( Partner_Commision_Model__c ))</errorConditionFormula>
    <errorMessage>Please update Partner Commission before submitting for OMT Approval.</errorMessage>
</ValidationRule>